feat(autofocus-editor): surface valid_modalities + min_magnification constraints
Picks up the manifest additions from microscope_configurations so the
GUI dropdown can no longer offer a metric that's physically wrong for
the active sample type. Existing combos still show the full metric
list -- this is informational, not blocking -- so operators retain the
escape hatch to pick anything.

Loader (FocusMetricsManifest.java):
- MetricSpec gains validModalities and minMagnification fields, with
  isValidForModality / isValidForMagnification helpers that mirror
  the Python side (manifest.py).
- canonicalModality(s) is the shared bucketing function: BF_IF, BF,
  brightfield, dia, transmission -> brightfield; ppm_*, polarized,
  pol -> ppm; FL/wf/lsm/shg/2p/etc. -> fluorescence; dark_field/df
  -> dark_field. Java + Python use identical rules so editor warnings
  match runtime intent.
- Empty-manifest fallback updated for the new MetricSpec signature.
- Generated YAML header (headerCommentBlock) prints the constraints
  alongside each metric so a YAML-only reader sees the same hints.

Editor (AutofocusEditorWorkflow.java):
- Score-metric ComboBox cell renderer appends a constraint badge
  ("[BF/PPM only]", "[20x+]", "[auto-fallback]") next to each entry.
- "Help me pick" dialog renders a constraint line beneath each card
  ("Restricted to: brightfield, ppm | Minimum magnification: 20x").
- Per-modality binding override picker:
  - Cell renderer flags any metric whose valid_modalities exclude
    the binding's canonicalised modality (red text + " -- not for
    fluorescence" suffix on the row).
  - Adds a wrap-text warning label that surfaces when the currently-
    picked override violates the manifest.

No runtime behaviour change: the editor doesn't refuse to save a
mismatched metric, just makes the mismatch loud at the picker.